--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "fetch-cookie": "^0.11.0",
     "node-fetch": "^2.6.1",
     "tough-cookie": "^4.0.0"
-  }
+  },
+  "keywords": [
+    "next",
+    "cookie",
+    "fetch"
+  ]
 }
