--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@ npm-debug.log
 yarn.lock
 package-lock.json
 .DS_Store
-.idea
-.vscode
 
-# vscode localhistory
+
+# vscode
+.vscode
 .history
+.idea
+
+# python cache
+__pycache__
