feat: add docker scripts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "name": "afeiship",
     "email": "1290657123@qq.com"
   },
+  "scripts": {
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:restart": "npm run docker:down && npm run docker:up"
+  },
   "license": "MIT",
   "generator": "@jswork/generator-github",
   "devDependencies": {
